--- a/client/package.json
+++ b/client/package.json
@@ -28,5 +28,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
+  },
+  "overrides": {
+    "esbuild": "^0.25.0"
   }
 }
